src/snapshots/i3_cycles__protocol__tests__missing_field_next_workspace.snap
---
source: src/protocol.rs
expression: result.unwrap_err().to_string()
---
missing field `workspace` at line 1 column 20
