src/snapshots/i3_cycles__protocol__tests__missing_field_select_cycle.snap
---
source: src/protocol.rs
expression: result.unwrap_err().to_string()
---
missing field `name` at line 1 column 18
