src/snapshots/i3_cycles__protocol__tests__next_workspace_browser.snap
---
source: src/protocol.rs
expression: response
---
{
  "NextWorkspace": {
    "workspace": "browser"
  }
}
