src/snapshots/i3_cycles__protocol__tests__next_workspace_special.snap
---
source: src/protocol.rs
expression: response
---
{
  "NextWorkspace": {
    "workspace": "workspace-3_test"
  }
}
