src/snapshots/i3_cycles__protocol__tests__response_cycle_selected_created.snap
---
source: src/protocol.rs
expression: response
---
{
  "CycleSelected": {
    "action": "Created"
  }
}
