src/snapshots/i3_cycles__protocol__tests__select_cycle_default.snap
---
source: src/protocol.rs
expression: request
---
{
  "SelectCycle": {
    "name": "default"
  }
}
