src/snapshots/i3_cycles__protocol__tests__status_complex.snap
---
source: src/protocol.rs
expression: response
---
{
  "Status": {
    "json": "{\"active_cycle\":\"work\",\"cycles\":[{\"name\":\"work\",\"workspaces\":[\"1\",\"2\"],\"position\":0}]}"
  }
}
