src/snapshots/i3_cycles__protocol__tests__status_simple.snap
---
source: src/protocol.rs
expression: response
---
{
  "Status": {
    "json": "{\"active_cycle\":\"default\",\"cycles\":[]}"
  }
}
