src/snapshots/i3_cycles__protocol__tests__toggle_workspace_browser.snap
---
source: src/protocol.rs
expression: request
---
{
  "Toggle": {
    "workspace": "browser"
  }
}
