src/snapshots/i3_cycles__protocol__tests__toggle_workspace_special.snap
---
source: src/protocol.rs
expression: request
---
{
  "Toggle": {
    "workspace": "workspace-2_test"
  }
}
